.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arcuststmt2__c.object
<CustomObject>
    <description>arcuststmt2__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_arcuststmt1__c</fullName>
        <label>Statement Session</label>
        <referenceTo>rstkf__arcuststmt1__c</referenceTo>
        <relationshipLabel>AR Statements Session Customers</relationshipLabel>
        <relationshipName>arcuststmt2s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_armemo_cr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reversing Credit Memo</label>
        <referenceTo>rstkf__armemo__c</referenceTo>
        <relationshipLabel>AR Statements Session Customers (Reversing Credit Memo)</relationshipLabel>
        <relationshipName>arcuststmt2s01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_armemo_dr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Memo for Finance Charge</label>
        <referenceTo>rstkf__armemo__c</referenceTo>
        <relationshipLabel>AR Statements Session Customers</relationshipLabel>
        <relationshipName>arcuststmt2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_balancedue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_bookfinancechg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Book Finance Charge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_custno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>AR Statements Session Customers</relationshipLabel>
        <relationshipName>arcuststmt2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_getsfinancechg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charge Produced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_getsstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statement for This Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_socustcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>AR Statements Session Customers</relationshipLabel>
        <relationshipName>socustcmpnos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_status__c</fullName>
        <description>arcuststmt2_status__c</description>
        <formula>rstkf__arcuststmt2_armemo_dr__r.rstkf__armemo_arinvtxn__r.rstkf__arinvtxn_session_status__c</formula>
        <inlineHelpText>The status of the Debit Memo created for the Finance Charge for this Customer for this Statement Period.</inlineHelpText>
        <label>Finance Charge Memo Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt2_stmtexchrate__c</fullName>
        <label>Statement Rate of Exchange</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcuststmt2_arcuststmt1__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__arcuststmt2_custno__r.rstk__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__arcuststmt2_arcuststmt1__r.rstkf__arcuststmt1_effdate__c) &amp; &apos;-&apos; &amp;  rstkf__arcuststmt2_custno__r.rstk__socust_custno__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Statements Session Customer</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AR_Statements_Session_Customers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcuststmt2_arcuststmt1__c</columns>
        <columns>rstkf__arcuststmt2_custno__c</columns>
        <columns>rstkf__arcuststmt2_getsstatement__c</columns>
        <columns>rstkf__arcuststmt2_balancedue__c</columns>
        <columns>rstkf__arcuststmt2_stmtexchrate__c</columns>
        <columns>rstkf__arcuststmt2_bookfinancechg__c</columns>
        <columns>rstkf__arcuststmt2_getsfinancechg__c</columns>
        <columns>rstkf__arcuststmt2_armemo_dr__c</columns>
        <columns>rstkf__arcuststmt2_armemo_cr__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Statements Session Customers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Statements Session Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>